update(main/Overhaul-finalised): Implemented a command manager system for future updated, provided the bonemeal feature, this will eventually be a percent system. - NBT items will be next